--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
-apply plugin: 'eclipse'
+apply plugin: 'idea'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 version = '1.0'
 jar {
 	manifest {
@@ -17,11 +17,11 @@ repositories { mavenCentral() }
 configurations { jbehave }
 
 dependencies {
-	compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+	compile group: 'commons-collections', name: 'commons-collections', version: '3.2.1'
 	testCompile (
-			[group: 'junit', name: 'junit', version: '4.+'],
-			[group: 'org.jbehave', name: 'jbehave-core', version: '4.+'],
-			[group: 'de.codecentric', name: 'jbehave-junit-runner', version: '1.0.1']
+			[group: 'junit', name: 'junit', version: '4.12'],
+			[group: 'org.jbehave', name: 'jbehave-core', version: '4.1'],
+			[group: 'de.codecentric', name: 'jbehave-junit-runner', version: '1.2.0']
 			)
 }
 
